kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gaia-decoupage-nom-voie-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: gaia-decoupage-nom-voie
