kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaia-decoupage-nom-voie-ingress
spec:
  tls:
    - hosts:
        -  gaia-decoupage-nom-voie-api.lab.sspcloud.fr
  rules:
    - host: gaia-decoupage-nom-voie-api.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaia-decoupage-nom-voie-service
                port:
                  number: 80
